# sound_link

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  package-lock.json  package.json  vite.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: index.html  main.js  router-settings.html  router-settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/devices/: audio.rs  mod.rs
src-tauri/src/router/: delay_buffer.rs  mod.rs  router.rs  volume_sync.rs
src/components/: DeviceBall.vue
src/styles/: main.css
src/utils/: version.js
src/views/: MainView.vue  RouterSettingsView.vue  SettingsView.vue
