[package]
name = "sound-link"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_StructuredStorage",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
